Bug 146988 - Opening at cursor position doesn't work in large documents (User Data must be entered)
Summary: Opening at cursor position doesn't work in large documents (User Data must be...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
: 148368 (view as bug list)
Depends on:
Blocks: Saved-Cursor 146976
  Show dependency treegraph
 
Reported: 2022-01-25 18:34 UTC by Telesto
Modified: 2023-02-05 09:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (105.13 KB, application/vnd.oasis.opendocument.text)
2022-01-25 18:34 UTC, Telesto
Details
A document with all characters replaced with 'x' (37.60 KB, application/vnd.oasis.opendocument.text)
2022-08-29 18:35 UTC, MR Zenwiz
Details
Screenshot immediately after opening hours after last edit. (104.87 KB, image/png)
2022-08-29 18:36 UTC, MR Zenwiz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-01-25 18:34:09 UTC
Description:
Opening at cursor position doesn't work consistently

Steps to Reproduce:
1. Open the attached file
2. Go to page 68. Make some edit Save & reload
3. Notice you will be at page 1 on file open
4. Make an edit on page 33 & save'
5. File reload, notice that the page will (eventually show)

Note you have to have some User Data (Tools -> Options -> LibreOffice)  put into the field to be able to store cursor position 

Actual Results:
First page

Expected Results:
Open at cursor position


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4a388f5e01ebb5a512931d11e48c4380382239c8
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL

and in
Version: 7.1.0.0.beta1+ (x64)
Build ID: f9fab4203c1aa0b9a3f27ce2713b6d5addc7df19
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

fine with
7.0
Comment 1 Telesto 2022-01-25 18:34:24 UTC
Created attachment 177785 [details]
Example file
Comment 2 BogdanB 2022-01-25 20:11:11 UTC
Repro in
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 0c3b8792b712e939d2ad524d554f96616b4844be
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

But strange, no repro in
Version: 7.2.5.2 / LibreOffice Community
Build ID: 499f9727c189e6ef3471021d6132d4c694f357e5
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Staying at the same page
Comment 3 BogdanB 2022-01-25 20:12:37 UTC
Repro in
Version: 7.3.1.0.0+ / LibreOffice Community
Build ID: de15e8d4f2f2e5d10cb5d9203e51f3a28347db8d
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Telesto 2022-01-25 21:37:59 UTC
(In reply to BogdanB from comment #2)
> But strange, no repro in
> Version: 7.2.5.2 / LibreOffice Community
> Build ID: 499f9727c189e6ef3471021d6132d4c694f357e5
> CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
> Locale: ro-RO (ro_RO.UTF-8); UI: en-US
> Calc: threaded
> 
> Staying at the same page

For me it's not working with 7.1b1 for some reason.. or difference between GTK3 and Win?
Comment 5 LeroyG 2022-01-26 01:23:39 UTC
Not reproducible in
Version: 7.1.8.1 / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 1; OS: Linux 4.12; UI render: default; VCL: x11
Locale: es-MX (es_AR.UTF-8); UI: en-US
Calc: threaded

Also tested with page 80.
Comment 6 Timur 2022-02-02 15:00:51 UTC
No repro Linux 7.2 oldest, repro latest. 
Seen already on open (cursor on page 1) if saved before with correct LO (cursor somewhere else). Seen with OOO_EXIT_POST_STARTUP=1.

commit 268c4799e6c2361491da9d5d5f6bd02511edfed8
Date:   Sun Jun 13 13:31:47 2021 +0200
    source 07021596acb3d104ba129d371b1ae0b79f67a6a4
    pre 93a3e2f86c27b06062708fe788963a0e49f3a90b

author	Noel Grandin <noelgrandin@gmail.com>	2021-06-12 
tdf#142242 Forename imported with trailing space

Hi Noel, please see this.
Comment 7 Timur 2022-04-04 17:13:36 UTC
*** Bug 148368 has been marked as a duplicate of this bug. ***
Comment 8 Timur 2022-04-26 10:57:40 UTC
*** Bug 148785 has been marked as a duplicate of this bug. ***
Comment 9 MR Zenwiz 2022-04-26 18:45:02 UTC Comment hidden (obsolete)
Comment 10 Noel Grandin 2022-06-02 11:19:21 UTC
Are you sure about this bisect?
Reverting the mentioned commit does not fix the issue.
Comment 11 Noel Grandin 2022-06-03 19:38:13 UTC
Never mind, I can see the problem now, will have a fix shortly
Comment 12 Commit Notification 2022-06-03 21:04:17 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a3d4f7e8fb714aa987c542c8d6c8822a41818701

tdf#146988 Opening at cursor position doesn't work in large documents

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 BogdanB 2022-06-22 16:38:45 UTC
I tested on Version: 7.4.0.0.beta1+ / LibreOffice Community
Build ID: 6ab56a4fc946f6294513f23a3ea47aa0aa154b7d
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

BUT it doesn't feel fix. The same steps like in Description also in 7.4. At step 2 is moving to page 1, at step 5 is staying.
Comment 14 MR Zenwiz 2022-08-29 18:34:19 UTC
I can confirm that this is not fixed in 7.4.

Attached is a document where it failed for me, and a screenshot showing something in the middle of the file when my lat edit position was at the end.

This doesn't happen all the time, but with this document it was consistent.
Comment 15 MR Zenwiz 2022-08-29 18:35:07 UTC
Created attachment 182077 [details]
A document with all characters replaced with 'x'
Comment 16 MR Zenwiz 2022-08-29 18:36:00 UTC
Created attachment 182078 [details]
Screenshot immediately after opening hours after last edit.
Comment 17 cipricus 2022-12-20 15:43:44 UTC
Linux 5.19.17
Kubuntu 22.10
LO 7.4.3.2

NOT fixed.
Comment 18 cipricus 2022-12-20 15:47:08 UTC
(In reply to cipricus from comment #17)
> Linux 5.19.17
> Kubuntu 22.10
> LO 7.4.3.2
> 
> NOT fixed.

Version: 7.4.3.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fr-FR (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.4.3-0ubuntu0.22.10.1
Calc: threaded
Comment 19 MR Zenwiz 2023-02-03 20:10:16 UTC
This remains unfixed in LO 7.5:

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 32; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Last I saw this was supposed to be fixed in 7.5 and it is not.
Comment 20 Aron Budea 2023-02-05 09:19:37 UTC
Not sure what this bug actually was, but the remaining issue is tracked under bug 140147. Let's mark this one as fixed.
Comment 21 Aron Budea 2023-02-05 09:21:18 UTC
*** Bug 148368 has been marked as a duplicate of this bug. ***