tdf#146988 Opening at cursor position doesn't work in large documents

regression from
    commit 07021596acb3d104ba129d371b1ae0b79f67a6a4 (HEAD)
    Date:   Sat Jun 12 18:57:51 2021 +0200
    tdf#142242 Forename imported with trailing space

Change-Id: I792fbe5955de464f41ac61c85f1ca651121b4a99
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135372
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>